--- a/gradle.properties
+++ b/gradle.properties
@@ -10,16 +10,16 @@ pluginVersion = 0.0.1
 pluginSinceBuild = 243
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2024.3.6
+platformType = RD
+platformVersion = 2025.2.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins =
+platformPlugins = org.jetbrains.rider.core, com.jetbrains.rider.unity
 # Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins =
+platformBundledPlugins = com.intellij.csharp
 # Example: platformBundledModules = intellij.spellchecker
-platformBundledModules =
+platformBundledModules = 
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 9.0.0
