--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.gettingcn.sssjmscreenplayfileparser
+pluginGroup = cn.monocur.sssjmscreenplayfileparser
 pluginName = SSSJM-ScreenplayFileParser
 pluginRepositoryUrl = https://github.com/SSSJMementoDev/SSSJM-ScreenplayFileParser
 # SemVer format -> https://semver.org
