--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ platformVersion = 2025.2.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins = org.jetbrains.rider.core, com.jetbrains.rider.unity
+platformPlugins = org.jetbrains.rider.core, com.jetbrains.rider.unity, org.jetbrains.rider
 # Example: platformBundledPlugins = com.intellij.java
 platformBundledPlugins = com.intellij.csharp
 # Example: platformBundledModules = intellij.spellchecker
