--- a/gradle.properties
+++ b/gradle.properties
@@ -7,17 +7,17 @@ pluginRepositoryUrl = https://github.com/SSSJMementoDev/SSSJM-ScreenplayFilePars
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 243
+pluginSinceBuild = 252
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = RD
+platformType = IU
 platformVersion = 2025.2.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins = org.jetbrains.rider.core, com.jetbrains.rider.unity, org.jetbrains.rider
+platformPlugins = 
 # Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins = com.intellij.csharp
+platformBundledPlugins = 
 # Example: platformBundledModules = intellij.spellchecker
 platformBundledModules = 
 
