--- a/src/main/resources/messages/SPFileParserBundle.properties
+++ b/src/main/resources/messages/SPFileParserBundle.properties
@@ -1,3 +1,5 @@
 projectService=Project service: {0}
 randomLabel=The random number is: {0}
 shuffle=Shuffle
+filetype.displayname=Getting Screenplay Script
+filetype.description=Getting Screenplay Script
