alpha 1.1.20250924.3 支持命令名直接输入常规字符以支持直接输入演员名字而不需要在次要参数另外定义

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,14 +9,6 @@
     <resource-bundle>messages.SPFileParserBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <projectService
-                serviceInterface="cn.monocur.sssjmscreenplayfileparser.services.SPFileParserProjectService"
-                serviceImplementation="cn.monocur.sssjmscreenplayfileparser.services.SPFileParserProjectService"
-        />
-        <toolWindow
-                factoryClass="cn.monocur.sssjmscreenplayfileparser.toolWindow.SPFileParserToolWindowFactory"
-                id="ScreenplayFileParser"
-        />
         <fileType
                 name="GettingScreenplayScript"
                 language="GettingScreenplayScript"
@@ -43,5 +35,10 @@
                 language="GettingScreenplayScript"
                 implementationClass="cn.monocur.sssjmscreenplayfileparser.screenplay.psi.GettingScreenplayScriptParserDefinition"
         />
+        <completion.contributor
+            language="GettingScreenplayScript"
+            implementationClass="cn.monocur.sssjmscreenplayfileparser.screenplay.GettingScreenplayScriptCompletionContributor"
+        />
+
     </extensions>
 </idea-plugin>
