--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,7 +37,7 @@
         />
         <completion.contributor
             language="GettingScreenplayScript"
-            implementationClass="cn.monocur.sssjmscreenplayfileparser.screenplay.GettingScreenplayScriptCompletionContributor"
+            implementationClass="cn.monocur.sssjmscreenplayfileparser.screenplay.completionContributor.GettingScreenplayScriptCompletionContributor"
         />
 
     </extensions>
