--- a/src/main/resources/messages/SPFileParserBundle.properties
+++ b/src/main/resources/messages/SPFileParserBundle.properties
@@ -3,3 +3,49 @@ randomLabel=The random number is: {0}
 shuffle=Shuffle
 filetype.displayname=Getting Screenplay Script
 filetype.description=Getting Screenplay Script
+
+completionContributor.commandName.bgm=\u80cc\u666f\u97f3\u4e50\u8bbe\u7f6e
+completionContributor.commandName.playsound=\u64ad\u653e\u58f0\u97f3
+completionContributor.commandName.Playvideo=\u64ad\u653e\u89c6\u9891
+completionContributor.commandName.changebg=\u66f4\u6539\u821e\u53f0\u80cc\u666f
+completionContributor.commandName.changefigure=\u66f4\u6539\u6f14\u5458\u8863\u88c5
+completionContributor.commandName.callscene=\u5207\u6362\u5267\u672c
+completionContributor.commandName.choose=\u9009\u62e9\u76ee\u6807\u6bb5\u843d
+completionContributor.commandName.label=\u5b9a\u4e49\u6807\u7b7e
+completionContributor.commandName.jumplabel=\u8df3\u8f6c\u6307\u5b9a\u6807\u7b7e
+completionContributor.commandName.setvar=\u5b9a\u4e49\u53d8\u91cf
+completionContributor.commandName.setanimation=\u6267\u884c\u52a8\u4f5c
+completionContributor.commandName.settransform=\u8bbe\u7f6e\u53d8\u6362
+completionContributor.commandName.genobject=\u751f\u6210\u6e38\u620f\u5bf9\u8c61
+completionContributor.commandName.settextbox=\u8bbe\u7f6e\u53f0\u8bcd\u6587\u672c\u6846\u6837\u5f0f
+completionContributor.commandName.getuserinput=\u83b7\u53d6\u7528\u6237\u8f93\u5165
+
+completionContributor.subParam.concat=\u672a\u5b8c\u5f85\u7eed
+completionContributor.subParam.next=\u7acb\u523b\u6267\u884c\u4e0b\u4e00\u6b65
+completionContributor.subParam.left=\u5f15\u5411\u5de6\u8fb9
+completionContributor.subParam.right=\u5f15\u5411\u53f3\u8fb9
+completionContributor.subParam.center=\u5f15\u5411\u4e2d\u95f4
+
+completionContributor.subParam.id=\u6307\u5411\u5bf9\u5e94id\uff0c\u5426\u5219\u65b0\u5efa\u5bf9\u8c61\u5e76\u6307\u5411
+completionContributor.subParam.target=\u6307\u5411\u5bf9\u5e94id\uff0c\u4f46\u4e0d\u4f1a\u521b\u5efa\u65b0\u5bf9\u8c61
+completionContributor.subParam.option=\u9009\u62e9\u9009\u9879
+
+completionContributor.subParam.volume=\u8c03\u8282\u97f3\u89c6\u9891\u97f3\u91cf
+completionContributor.subParam.voice=\u6307\u5b9a\u8981\u64ad\u653e\u7684\u97f3\u9891\uff0c\u4e3b\u8981\u7528\u4e8e\u5bf9\u8bdd
+completionContributor.subParam.motion=\u8981\u6c42\u6f14\u5458\u8fdb\u884c\u52a8\u4f5c
+completionContributor.subParam.skipOff=\u963b\u6b62\u73a9\u5bb6\u8df3\u8fc7
+
+completionContributor.subParam.clear=\u6e05\u7a7a\u6587\u672c\u6846
+completionContributor.subParam.title=\u8f93\u5165\u6846\u6807\u9898
+completionContributor.subParam.buttonText=\u8f93\u5165\u6846\u6309\u94ae\u6587\u672c
+completionContributor.subParam.defaultText=\u8f93\u5165\u6846\u6253\u5e95\u6587\u672c
+
+completionContributor.subParam.enter=\u8bbe\u7f6e\u97f3\u89c6\u9891\u4e0e\u56fe\u50cf\u7684\u6e10\u5165
+completionContributor.subParam.exit=\u8bbe\u7f6e\u97f3\u89c6\u9891\u4e0e\u56fe\u50cf\u7684\u6e10\u51fa
+completionContributor.subParam.layer=\u8bbe\u7f6e\u56fe\u50cf\u56fe\u5c42
+
+completionContributor.subParam.async=\u4e0e\u540e\u7eed\u8bed\u53e5\u4e00\u9f50\u5f02\u6b65\u6267\u884c
+completionContributor.subParam.duration=\u8bbe\u7f6e\u547d\u4ee4\u6267\u884c\u5b8c\u6bd5\u6240\u9700\u7684\u65f6\u95f4%28ms%29
+completionContributor.subParam.global=\u5c06\u53d8\u91cf\u7f6e\u4e8e\u5168\u5c40
+completionContributor.subParam.when=\u8bbe\u7f6e\u5224\u65ad\u6761\u4ef6
+completionContributor.subParam.state=\u6307\u5b9a\u547d\u4ee4\u6267\u884c\u72b6\u6001
