--- a/src/main/resources/messages/SPFileParserBundle.properties
+++ b/src/main/resources/messages/SPFileParserBundle.properties
@@ -21,6 +21,7 @@ completionContributor.commandName.settextbox=\u8bbe\u7f6e\u53f0\u8bcd\u6587\u672
 completionContributor.commandName.getuserinput=\u83b7\u53d6\u7528\u6237\u8f93\u5165
 
 completionContributor.subParam.concat=\u672a\u5b8c\u5f85\u7eed
+completionContributor.subParam.hinder=\u963b\u788d\u6267\u884c\uff0c\u4f7f\u81ea\u52a8\u6267\u884c\u5bf9\u5f53\u524d\u8bed\u53e5\u65e0\u6548
 completionContributor.subParam.next=\u7acb\u523b\u6267\u884c\u4e0b\u4e00\u6b65
 completionContributor.subParam.left=\u5f15\u5411\u5de6\u8fb9
 completionContributor.subParam.right=\u5f15\u5411\u53f3\u8fb9
